redesigned subworld selection screen